<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="45dp"
    android:orientation="vertical"
    >

    <HorizontalScrollView 
       android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView"
        android:fadingEdge="horizontal"
        android:layout_gravity="center_horizontal"
    >
    <LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
       <Button 
            android:id="@+id/hottopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hottopic"
        android:background="#FFFFFF"
         android:textColor="#030303"
     
        android:textSize="20dp"/>
    <Button 
        android:id="@+id/topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic"
         android:textColor="#030303"
         android:background="#FFFFFF" 
        android:textSize="20dp"/>

   

     <Button 
          android:id="@+id/hotperson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotperson" 
         android:background="#FFFFFF"
          android:textColor="#030303"
        android:textSize="20dp"/>
      <Button
         android:id="@+id/hotprovince"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:background="#FFFFFF"
        android:text="@string/hotprovince"
         android:textColor="#030303"
        android:textSize="20dp" />
    
       <Button
         android:id="@+id/hotcity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:background="#FFFFFF"
        android:text="@string/hotcity"
         android:textColor="#030303"
        android:textSize="20dp" />
       
        <Button
         android:id="@+id/hotcountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:background="#FFFFFF"
        android:text="@string/hotcountry"
         android:textColor="#030303"
        android:textSize="20dp" />
        
         <Button
         android:id="@+id/hotarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:background="#FFFFFF"
        android:text="@string/hotarea"
         android:textColor="#030303"
        android:textSize="20dp" />
      
       <Button 
            android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:background="#FFFFFF"
        android:text="@string/search"
        android:textColor="#030303"
        android:textSize="20dp"/>
       
          <Button 
               android:id="@+id/focus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/focus"
         android:background="#FFFFFF"
         android:textColor="#030303"
        android:textSize="20dp"/>
    
    
</LinearLayout>
    
    
</HorizontalScrollView>
   
</LinearLayout>