<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg"
    >

    <Button
        android:id="@+id/btsearch"
        android:layout_width="100sp"
        android:layout_height="60sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="128dp"
        android:background="#ffffff"
        android:textColor="#000000"
        android:text="@string/btsearch" />

    <EditText
        android:id="@+id/input"
        android:layout_width="fill_parent"
        android:layout_height="80sp"
        android:layout_above="@+id/btsearch"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="56dp"
        android:hint="@string/input" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/NewsSensor"
        android:textSize="50dp" 
      
        />

</RelativeLayout>